# WpDaemon

./: .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  README.md
build_system/: script.sh  vm_builder.py
include/wpmd/: arg_parser.hpp  audit_logger.hpp  binary_manager.hpp  command_handler.hpp  config_manager.hpp  daemonizer.hpp  interactive_cli.hpp  log_manager.hpp  state_machine.hpp  tcp_server.hpp  utils.hpp  wireproxy_process.hpp
src/: arg_parser.cpp  audit_logger.cpp  binary_management.cpp  binary_manager.cpp  command_handler.cpp  config_manager.cpp  daemonizer.cpp  interactive_cli.cpp  log_manager.cpp  main.cpp  state_machine.cpp  tcp_server.cpp  wireproxy_process.cpp
tests/: README.md  __init__.py  test_daemon.py
